Revert "Get & Update endpoints added for Books"
This reverts commit d0e8b63d56ed7c69b81fe1faffcecb4305c61f5e.
